Upgrade tests on ProductServiceImplTest